--- a/css/timeline.css
+++ b/css/timeline.css
@@ -19,7 +19,6 @@ textarea {
 	box-sizing : border-box;
 	max-width : 100vw;
 	display : block;
-	margin : auto;
 	padding-bottom : 10px;
 }
 
@@ -71,7 +70,7 @@ textarea {
 	font-size : 18px;
 	font-weight : bold;
 	letter-spacing : -2px;
-	font-family : 'NanumGothicL';
+	font-family : inherit;
 }
 
 #post_wrap > #write {
@@ -307,7 +306,7 @@ textarea {
 	padding-bottom : 3px;
 	color : #f15c3e;
 	cursor : pointer;
-	font-family : 'NanumGothicL';
+	font-family : inherit;
 	margin-bottom : 5px;
 }
 
@@ -332,7 +331,7 @@ textarea {
 	text-decoration : none;
 	color : #f15c3e;;
 	font-weight : bold;
-	font-family : 'NanumGothicL';
+	font-family : inherit;
 	margin-right : 5px;
 }
 
@@ -450,49 +449,6 @@ textarea {
 	overflow-y : hidden;
 	max-height : 75px;
 	display : block;
-}
-
-.post .game_result {
-	text-align : center;
-	font-size : 24px;
-}
-
-.post .game_result span {
-	color : #f15c3e;
-}
-
-.post .game_result > div > img {
-	height : 150px;
-	width : 150px;
-	border-radius : 100px;
-	vertical-align : middle;
-	border : 5px solid #000;
-}
-
-.post .game_result > div > .game_result_win {
-	border : 5px solid #f15c3e;
-}
-
-.post .game_result > div {
-	cursor : pointer;
-	display : inline-block;
-	padding : 10px;
-	vertical-align : middle;
-	font-weight : bold;
-	font-size : 20px;
-}
-
-.post .game_result > div > span {
-	font-weight : initial;
-}
-
-.post .game_result > div > div {
-	//font-size : 20px;
-}
-
-.post .game_result > div > div >  span {
-	padding : 2px;
-	//font-size : 35px;
 }
 
 .post .post_inside a {
@@ -670,7 +626,7 @@ textarea {
 	font-size : 18px;
 	cursor : pointer;
 	font-weight : bold;
-	font-family :  'NanumGothicL';
+	font-family :  inherit;
 	padding-left : 23px;
 	margin-left : 7px;
 	padding-bottom : 20px;
